2006-07-22  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Some zval macro's differ for php4 and 5, this fixes #146.
        * Also rewrite clean code for cache files on win32 for directory 
          hashing. This hasn't been tested on windows!!!

2006-07-19  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Use some more zval macro's to cleanup things a bit
        * Removed the code from mm.c that tried to allocate more then one segment 
          because it didn't work, this part needs a redesign of the mm code to 
          allow this. It should allocate one to init the shared memory and add
          the other to the free list.

2006-07-02  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Made some fixes to ea_info.c to make eA compile on windows again.
          This should fix bug #116.

2006-06-30  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Cleaned up the checking for other incompatible extensions a 
          bit. This should fix the use of IonCube with eAccelerator. I did 
          some test loading IonCube in different ways and never got in to 
          trouble. This fixes ticket #66.

2006-06-30  Hans Rakers <hans at parse dot nl>

	* Added ability to sort table columns by clicking on the table
	  headings in the control panel
	* Quick & dirty fix for eaccelerator_clear to work with the new
	  cache dir hashing. This still needs to be done for win32.

	  eaccelerator_clean still needs some fixing to work with the
	  dir hashing.

2006-06-27  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixed ifdef for #108 to use only on windows
        * Fix for bug #109, #31 and SF-1102070
        * Cleaned-up RINIT a bit for hostname determining
        * Included the fix from ticket #94 for zts

2006-06-26  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix ticket #108
        * Removed webui.[c|h] from the windows project files

2006-06-06  Hans Rakers <hans at parse dot nl>
