@@ -3,6 +3,8 @@
         * Some zval macro's differ for php4 and 5, this fixes #146.
         * Also rewrite clean code for cache files on win32 for directory 
           hashing. This hasn't been tested on windows!!!
+        * Added a script to create a bugreport file with more information
+          about the userenvironment.
 
 2006-07-19  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
